--- a/src/sass/common/_prism-overrides.scss
+++ b/src/sass/common/_prism-overrides.scss
@@ -1,4 +1,4 @@
-$code-block-font-size: 1.2rem;
+$code-block-font-size: 1.4rem;
 $btn-offset: 4px;
 $btn-size: calc((#{$code-block-font-size} * 3.5) - (2 * #{$btn-offset}));
 
